# aws_project

./: .gitignore  README.md  launch_ec2.yml  pyproject.toml
aws_automation/: __init__.py  main.py
