[tool.poetry]
name = "aws-project"
version = "0.1.0"
description = ""
authors = ["Carlos Huaccho <Carlos@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mypy = "*"
pydantic = "*"
pytest = "*"
pydocstyle = "*"
black = "*"
flake8 = "*"
boto3 = "*"
pyyaml = "*"
ipython = "*"
cfn-flip = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
